@@ -1,3 +1,9 @@
+Wed Apr  4 19:13:53 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * tests/Bug_2735_Regression/server.cpp:
+
+          Avoid string conversion warnings.
+
 Wed Apr  4 19:04:51 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * orbsvcs/tests/ImplRepo/Bug_689_Regression/Bug_689_Regression.mpc:
